netlify redirects and toml files bug fix 1

--- a/netlify.toml
+++ b/netlify.toml
@@ -1,7 +1,5 @@
 [[redirects]]
   from = "/dashboard"
-  to = "/https://clazzy-travels.netlify.app/dashboard"
+  to = "https://clazzy-travels.netlify.app/dashboard"
   status = 301
-  force = false
-  query = {path = ":path"}
-
+  force = true
