netlify redirects and toml files bug fix 6

--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
         "@hookform/resolvers": "^3.9.0",
         "@mantine/core": "^5.10.5",
         "@mantine/hooks": "^5.10.5",
+        "@netlify/functions": "^2.8.2",
         "@netlify/next": "^1.4.9",
         "@reduxjs/toolkit": "^1.9.1",
         "@tippyjs/react": "^4.2.6",
@@ -38,6 +39,7 @@
         "mantine-datatable": "^1.7.35",
         "moment": "^2.30.1",
         "next": "14.0.3",
+        "next-on-netlify": "^3.0.1",
         "ni18n": "^1.0.5",
         "react": "18.2.0",
         "react-animate-height": "^3.1.0",
